--- a/index.html
+++ b/index.html
@@ -1,115 +1,100 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous">
-        </script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.gmail.com",
+                Username: "Kinal27213@gmail.com",
+                Password: "Kinal123@",
+                To: 'Kinal27213@gmail.com',
+                From: "Kinal27213@gmail.com",
+                Subject: "<email subject>",
+                Body: "<email body>",
+            }).then(
+                message => alert("mail sent successfully")
+            );
+
+
+        }
+    </script>
+
 </head>
 
 <body>
-    <div class="contact-form">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-5 col-md-12 col-sm-12">
-                <div class="card">
-                    <h1>Contact Form</h1>
-                    <div class="form-box">
-                        <form action="#" method="get">
+            <div class="col-lg-6 col-sm-12 col-xs-12">
+                <div class="form">
+                    <form action="mailto:kinal27213@gmail.com" method="get">
+                        <h2>Contact Form</h2>
+                        <div class="first-col">
                             <div class="row">
-                                <div class="first mx-3 my-3">
-                                    <div class="col-lg-6">
-                                        <div class="first-col">
-                                            <label for="fname" class="fname"><strong>FIRST NAME*</strong></label>
-                                            <input type="text" class="form-control" ngModel name="fname" id="fname"
-                                                placeholder="First name">
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6 ">
-                                        <div class="last-col">
-                                            <label for="lname" class="lname"><strong>LAST NAME*</strong></label>
-                                            <input type="text" class="form-control" ngModel name="lname" id="lname"
-                                                placeholder="Last name">
-                                        </div>
-                                    </div>
+                                <div class="col-6">
+                                    <label for="text"><strong>FIRST NAME*</strong></label>
+                                    <input type="text" class="form-control" placeholder="first name" name="fname"
+                                        ngModel id="fname" required>
                                 </div>
-                                <div class="Email">
-                                    <label for="Email" class="email"><strong>EMAIL*</strong></label>
-                                    <input type="text" class="form-control" placeholder="Email" name="email" ngModel
-                                        id="email" required>
-                                </div>
-
-                                <div class="Message">
-                                    <label for="Message" class="message"><strong>MESSAGE*</strong></label>
-                                    <textarea class="form-control" rows="3" placeholder="Message" name="Message"
-                                        id="Message" ngModel></textarea>
-                                </div>
-
-                                <div class="Additional_Details">
-                                    <label for="Additional_Details" class="Additional_Details"><strong>ADDITIONAL
-                                            DETAILS*</strong></label>
-                                    <textarea class="form-control" rows="4" placeholder="Additional Details"
-                                        name="Additional" id="Additional" ngModel></textarea>
-                                </div>
-                                <div class="send-message">
-                                    <button type="submit" class="btn btn-primary" onclick="sendEmail()">Send Message</button>
+                                <div class="col-6">
+                                    <label for="text"><strong>LAST NAME*</strong> </label>
+                                    <input type="text" class="form-control" placeholder="last name" name="lname" ngModel
+                                        id="lname" required>
                                 </div>
                             </div>
-                            <script>
-                                function sendEmail() {
-                                    var first_name = $('#fname').val();
-                                    //     var last_name = $('#Lname').val();
-                                    var email = $('#email').val();
-                                    //     var phone = $('#Con_phone').val();
-                                    //     var message = $('#Message').val();
+                        </div>
+                        <div class="Email">
+                            <label for="Email" class="email"><strong>EMAIL*</strong></label>
+                            <input type="text" class="form-control" placeholder="Email" name="email" ngModel id="email"
+                                required>
+                        </div>
 
-                                    // var Body = 'Name: ' + first_name + last_name + '<br>Email: ' + email + '<br>phone:' + phone + '<br>Message:' + message;
-                                    Email.send({
-                                        Host: "smtp.gmail.com",
-                                        Username: "kinal27213@gmail.com",
-                                        Password: "Kinal123@",
-                                        To: 'kinal27213@gmail.com',
-                                        From: 'kinal27213@gmail.com',
-                                        Subject: "Query from customer",
-                                        Body: first_name,
-                                    })
-                                        .then(
-                                            alert('your mail has been sent successfully we will connect you as soon as possible'));
-                                }
-                            </script>
-                        </form>
-                    </div>
+                        <div class="Message">
+                            <label for="Message" class="Message"><strong>MESSAGE*</strong></label>
+                            <input type="text" class="form-control" placeholder="Message" name="Message" ngModel
+                                id="Message" required>
+                        </div>
 
+                        <div class="Additional_Details">
+                            <label for="Additional_Details" class="Additional_Details"><strong>ADDITIONAL
+                                    DETAILS*</strong></label>
+                            <textarea class="form-control" rows="4" placeholder="Additional Details" name="Additional"
+                                id="Additional" ngModel></textarea>
+                        </div>
+
+                        <div class="send-message">
+                            <button type="submit" class="btn btn-primary" onclick="sendEmail()">Send Message</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-
-            <div class="col-lg-7 col-md-12 col-sm-12">
-                <div class="content">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="content my-5">
                     <div class="demo">
                         <h2>How JusBid works?</h2>
-                        <p style="text-align:justify">JusBid provides hotel rooms and MICE services based on the bidding
+                        <p style="text-align:justify;">JusBid provides hotel rooms and MICE services based on the
+                            bidding
                             process. If you are a
                             hotelier, you can earn income on your unused inventory, and if you are a customer, you can
                             get
                             hotel rooms at a lower price. </p>
                     </div>
                     <div class="demo">
-                        <h4>Book a hotel room?</h4>
-                        <p>Open the site/app and look for the desired hotel. Make a bid. If you are booking a hotel on
+                        <h4>1. Book a hotel room?</h4>
+                        <p style="text-align:justify">Open the site/app and look for the desired hotel. Make a bid. If
+                            you are booking a hotel on
                             an
                             instant basis, the hotel will confirm your booking bid within half an hour. When confirmed,
                             the
@@ -117,8 +102,9 @@
                         <hr>
                     </div>
                     <div class="demo">
-                        <h4>Book a hotel room in advance </h4>
-                        <p>Now you can book a hotel more than three days before your stay. For that, you have to look
+                        <h4>2. Book a hotel room in advance </h4>
+                        <p style="text-align:justify">Now you can book a hotel more than three days before your stay.
+                            For that, you have to look
                             for
                             the hotel and place a bid. The maximum period a hotel will take to confirm your bid is two
                             days.
@@ -126,8 +112,8 @@
                         <hr>
                     </div>
                     <div class="demo">
-                        <h4>What if my bid gets cancelled?</h4>
-                        <p>In this bidding system, the hotel
+                        <h4>3. What if my bid gets cancelled?</h4>
+                        <p style="text-align:justify">In this bidding system, the hotel
                             can reject your bid if it is not satisfied with the price.
                             In
                             this case, you can place a bid again on a higher price or look for another hotel. We provide
@@ -136,8 +122,8 @@
                         <hr>
                     </div>
                 </div>
-
             </div>
         </div>
-    </div>
 </body>
+
+</html>
