--- a/index.html
+++ b/index.html
@@ -1,129 +1,267 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script>
-        function sendEmail() {
-            Email.send({
-                Host: "smtp.gmail.com",
-                Username: "Kinal27213@gmail.com",
-                Password: "Kinal123@",
-                To: 'Kinal27213@gmail.com',
-                From: "Kinal27213@gmail.com",
-                Subject: "<email subject>",
-                Body: "<email body>",
-            }).then(
-                message => alert("mail sent successfully")
-            );
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <!-- <style>
+    .contact-form {
+      margin-top: 100px;
+      padding: 60px;
+      padding-right: 150px;
+    }
 
+    .contact-form .form {
+      margin-right: 80px;
+    }
 
-        }
-    </script>
+    .contact-form .form h2 {
+      text-align: center;
+      color: red;
+    }
+
+    .contact-form .form form {
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      padding: 25px;
+      border-radius: 10px;
+    }
+
+    .contact-form .form form .first-col {
+      margin-top: 20px;
+    }
+
+    .contact-form .form form .first-col input {
+      padding: 30px;
+    }
+
+    .contact-form .form form .email {
+      margin-top: 5px;
+    }
+
+    .contact-form .form form .email input {
+      padding: 30px;
+    }
+
+    .contact-form .form form .Message {
+      margin-top: 5px;
+    }
+
+    .contact-form .form form .Message input {
+      padding: 30px;
+    }
+
+    .contact-form .form form .Additional_Details {
+      margin-top: 5px;
+    }
+
+    .contact-form .form form .send-message {
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .contact-form .form form .send-message button {
+      width: 100%;
+      height: 8%;
+      background-color: red;
+    }
+
+    .contact-form .content {
+      margin-top: 50px;
+      margin-right: 60px;
+    }
+
+    .contact-form .content p {
+      text-align: justify;
+    }
+
+    @media (max-width: 1440px) {
+      .contact-form {
+        padding-left: 100px;
+        margin-left: 30px;
+      }
+
+      .contact-form .content {
+        margin-top: 10px;
+        margin-right: 30px;
+      }
+    }
+
+    @media (max-width: 1024px) {
+      .contact-form {
+        padding-left: 30px;
+        margin-left: 0px;
+        padding-right: 20px;
+      }
+
+      .contact-form .form {
+        margin-right: -5px;
+      }
+
+      .contact-form .content {
+        margin-top: 10px;
+        margin-right: 0px;
+      }
+
+      .contact-form .content .demo h2 {
+        font-size: 24px;
+      }
+
+      .contact-form .content .demo p {
+        font-size: 14px;
+      }
+
+      .contact-form .content .demo h4 {
+        font-size: 18px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .contact-form {
+        padding-left: 15px;
+        margin-top: 0%;
+      }
+
+      .contact-form .content {
+        margin-top: 60px;
+      }
+    }
+
+    /*# sourceMappingURL=style.css.map */
+  </style> -->
 
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-sm-12 col-xs-12">
-                <div class="form">
-                    <form action="mailto:kinal27213@gmail.com" method="get">
-                        <h2>Contact Form</h2>
-                        <div class="first-col">
-                            <div class="row">
-                                <div class="col-6">
-                                    <label for="text"><strong>FIRST NAME*</strong></label>
-                                    <input type="text" class="form-control" placeholder="first name" name="fname"
-                                        ngModel id="fname" required>
-                                </div>
-                                <div class="col-6">
-                                    <label for="text"><strong>LAST NAME*</strong> </label>
-                                    <input type="text" class="form-control" placeholder="last name" name="lname" ngModel
-                                        id="lname" required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="Email">
-                            <label for="Email" class="email"><strong>EMAIL*</strong></label>
-                            <input type="text" class="form-control" placeholder="Email" name="email" ngModel id="email"
-                                required>
-                        </div>
-
-                        <div class="Message">
-                            <label for="Message" class="Message"><strong>MESSAGE*</strong></label>
-                            <input type="text" class="form-control" placeholder="Message" name="Message" ngModel
-                                id="Message" required>
-                        </div>
-
-                        <div class="Additional_Details">
-                            <label for="Additional_Details" class="Additional_Details"><strong>ADDITIONAL
-                                    DETAILS*</strong></label>
-                            <textarea class="form-control" rows="4" placeholder="Additional Details" name="Additional"
-                                id="Additional" ngModel></textarea>
-                        </div>
-
-                        <div class="send-message">
-                            <button type="submit" class="btn btn-primary" onclick="sendEmail()">Send Message</button>
-                        </div>
-                    </form>
+  <div class="contact-form">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+        <div class="form">
+          <form action="#" method="post">
+            <h2>Contact Form</h2>
+            <div class="first-col">
+              <div class="row">
+                <div class="col-lg-6">
+                  <label for="text"><strong>FIRST NAME*</strong></label>
+                  <input type="text" class="form-control" placeholder="first name" name="fname" ngModel id="fname"
+                    required>
                 </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <div class="content my-5">
-                    <div class="demo">
-                        <h2>How JusBid works?</h2>
-                        <p style="text-align:justify;">JusBid provides hotel rooms and MICE services based on the
-                            bidding
-                            process. If you are a
-                            hotelier, you can earn income on your unused inventory, and if you are a customer, you can
-                            get
-                            hotel rooms at a lower price. </p>
-                    </div>
-                    <div class="demo">
-                        <h4>1. Book a hotel room?</h4>
-                        <p style="text-align:justify">Open the site/app and look for the desired hotel. Make a bid. If
-                            you are booking a hotel on
-                            an
-                            instant basis, the hotel will confirm your booking bid within half an hour. When confirmed,
-                            the
-                            room is yours for the desired date and time!</p>
-                        <hr>
-                    </div>
-                    <div class="demo">
-                        <h4>2. Book a hotel room in advance </h4>
-                        <p style="text-align:justify">Now you can book a hotel more than three days before your stay.
-                            For that, you have to look
-                            for
-                            the hotel and place a bid. The maximum period a hotel will take to confirm your bid is two
-                            days.
-                            When they confirm the bid, you can book the stay well in advance!</p>
-                        <hr>
-                    </div>
-                    <div class="demo">
-                        <h4>3. What if my bid gets cancelled?</h4>
-                        <p style="text-align:justify">In this bidding system, the hotel
-                            can reject your bid if it is not satisfied with the price.
-                            In
-                            this case, you can place a bid again on a higher price or look for another hotel. We provide
-                            plenty of hotel rooms to book!
-                        </p>
-                        <hr>
-                    </div>
+                <div class="col-lg-6">
+                  <label for="text"><strong>LAST NAME*</strong> </label>
+                  <input type="text" class="form-control" placeholder="last name" name="lname" ngModel id="lname"
+                    required>
                 </div>
+              </div>
             </div>
+            <div class="Email">
+              <label for="Email" class="email"><strong>EMAIL*</strong></label>
+              <input type="text" class="form-control" placeholder="Email" name="email" ngModel id="email" required>
+            </div>
+
+            <div class="Message">
+              <label for="Message" class="Message"><strong>MESSAGE*</strong></label>
+              <input type="text" class="form-control" placeholder="Message" name="Message" ngModel id="message"
+                required>
+            </div>
+
+            <div class="Additional_Details">
+              <label for="Additional_Details" class="Additional_Details"><strong>ADDITIONAL
+                  DETAILS*</strong></label>
+              <textarea class="form-control" rows="4" placeholder="Additional Details" name="Additional" id="additional"
+                ngModel></textarea>
+            </div>
+
+            <div class="send-message">
+              <button type="submit" class="btn btn-primary" onclick="sendEmail()">Send Message</button>
+            </div>
+          </form>
         </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="content">
+          <div class="demo">
+            <h2>How JusBid works?</h2>
+            <p>JusBid provides hotel rooms and MICE services based on the
+              bidding
+              process. If you are a
+              hotelier, you can earn income on your unused inventory, and if you are a customer, you can
+              get
+              hotel rooms at a lower price. </p><br>
+          </div>
+          <div class="demo">
+            <h4>1. How to Book a hotel room?</h4>
+            <p>Open the site/app and look for the desired hotel. Make a bid. If
+              you are booking a hotel on
+              an
+              instant basis, the hotel will confirm your booking bid within half an hour. When confirmed,
+              the
+              room is yours for the desired date and time.</p>
+            <hr>
+          </div>
+          <div class="demo">
+            <h4>2. How to Book a hotel room in advance? </h4>
+            <p>Now you can book a hotel more than three days before your stay.
+              For that, you have to look
+              for
+              the hotel and place a bid. The maximum period a hotel will take to confirm your bid is two
+              days.
+              When they confirm the bid, you can book the stay well in advance.</p>
+            <hr>
+          </div>
+          <div class="demo">
+            <h4>3. What if my bid gets cancelled?</h4>
+            <p>In this bidding system, the hotel
+              can reject your bid if it is not satisfied with the price.
+              In
+              this case, you can place a bid again on a higher price or look for another hotel. We provide
+              plenty of hotel rooms to book.
+            </p>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+
+
+
+  
+
+
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script type="text/javascript">
+    function sendEmail() {
+      var first_name = $('#fname').val();
+      console.warn(first_name)
+      var last_name = $('#lname').val();
+      var email = $('#email').val();
+      var message = $('#message').val();
+      var additional = $("#additional").val();
+      Email.send({
+        Host: "smtp.gmail.com",
+        Username: "Kinal27213@gmail.com",
+        Password: "dkiqjmcwdnnjkqny",
+        To: 'kinal27213@gmail.com',
+        From: email,
+        Subject: "Inquiry",
+        Body: "<email body>",
+      }).then(
+        message => alert("mail sent successfully")
+      );
+    }
+  </script>
+
 </body>
 
 </html>
